# coil-surge-simulator

./: .gitignore  AUDITORIA_PROJETO.md  CLAUDE.md  LICENSE  PROMPT_CORRECAO.md  PROMPT_MANIM.md  PROMPT_MELHORIAS_MANIM.md  PROMPT_ONDA_QUADRADA.md  PROMPT_RELATORIO_LATEX.md  PROMPT_VALIDACAO_ATP.md  README.md  RELATORIO_EXECUCAO_CORRECAO.md  RELATORIO_VALIDACAO_ATP_GERADOR.md  RELATORIO_VALIDACAO_ONDA_QUADRADA.md  main.py  manim.cfg  manim_presentation.py  manim_square_wave.py  pyproject.toml  requirements.txt  run_atp.py  save_images.py  simulate_direct.py  surto_bobina.atp  surto_bobina_gerador.atp
assets/: tikz_ladder_circuit.tex  tikz_ladder_grounded_circuit.tex
config/: default_case.json  gerador_aterrado.json
docs/evidencias_atp_falha/: 2026-04-24_63336514_tmp.txt  2026-04-24_63346162_tmp.txt  2026-04-24_debug1_lis.txt  2026-04-26_atp_stdout_KILL6.txt  2026-06-12_atp_stdout_sucesso.txt  README.md
manim-surto/: README.md  requirements.txt  surge_animation.py
relatorio/: PROMPT_RELATORIO.md  build_notes.tex  macros.tex  preamble.tex  references.bib  relatorio.tex
relatorio/figures/: circuito_tikz.tex
relatorio/sections/: 00_resumo.tex  01_visao_geral.tex  02_arquitetura_python.tex  03_modelo_eletrico.tex  04_fonte_surto.tex  05_modelo_atp.tex  06_correspondencia_python_atp.tex  (+5 more)
scripts/: compare_python_atp.py  gen_deck_gerador.py  gen_figuras_relatorio.py  plot_plotly.py
tests/: conftest.py  test_config_validation.py  test_impulse_source.py  test_initial_distribution.py  test_model_physics.py  test_regression_outputs.py  test_square_source.py
(+8 files in other folders)
